# theartgame

./: Cargo.toml  readme.md
assets/: readme.md
assets/th/: picture001.json  picture002.json  picture003.json  picture004.json  picture005.json  picture007.json  picture008.json  picture009.json  picture010.json  picture011.json  picture012.json  picture013.json  picture014.json  picture015.json  picture016.json  picture017.json
src/: main.rs  paintings.rs  world.rs
