[package]
name = "TheArtGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_flycam = "*"
serde = "1.0.189"
serde_json = "1.0.107"
#bevy_fly_camera ="*"
#bevy = "0.11.3"

[dependencies.bevy]
# Disable the default features if there are any that you do not want
default-features = true
features = ["jpeg"]
